cloud-infra-macros/tests/fails/memory_boundary_low.rs
use cloud_infra_macros::memory;

fn example() {
    let mem = memory!(127);
}

fn main() {}