cloud-infra-macros/tests/fails/memory_boundary_low.stderr
error: value should be at least 128
 --> tests/fails/memory_boundary_low.rs:4:23
  |
4 |     let mem = memory!(127);
  |                       ^^^
